--- a/uebungen/07.1.pipelines-1.md
+++ b/uebungen/07.1.pipelines-1.md
@@ -2,6 +2,14 @@
 
 > [!NOTE]
 > Um an Informationen über den Aufbau der Datei `/etc/passwd` zu gelangen, könnt ihr die passende Manpage dazu mit dem Kommando `man 5 passwd` aufrufen.
+> Für die Übungen werden folgende Kommandos benötigt: 
+> `grep`: gibt nur die Zeilen einer Datei/Textstrom aus, in der ein Suchbegriff/Pattern vorkommt
+> `cut`: kann Spalten/Felder aus Dateien/Textströmen ausschneiden
+> `head`: gibt den Anfang einer Datei/Textstrom aus
+> `tail`: gibt das Ende einer Datei/Textstrom aus
+> `sort`: sortiert nach gewünschten Kriterien
+> `uniq`: entfernt mehrfach vorkommende Zeilen
+> Nähere Infos zu den Kommandos sind in den jeweiligen Manpages zu finden.
 
 ## Übung 1: Anzahl der Benutzer im System ermitteln
 Zählt die Zeilen in der Datei `/etc/passwd`, um die Anzahl der Benutzer zu bestimmen. Nutzt dafür das Kommando `wc`.
@@ -31,5 +39,5 @@ Gebt mit `tail` nur die  letzte Zeile der `.bashrc` aus.
 Gebt mit `head` nur die ersten 2 Zeilen der `.bashrc` aus.
 
 ## Übung 8: Die Anzahl der Shells im System ermitteln
-Zählt die in `/etc/passwd` eingetragenen Shell. Wie viele verschiedene gibt es? Eventuell könnten hier die Kommandos `sort` und `uniq` nützlich sein.
+Zählt die in `/etc/passwd` eingetragenen Shells. Wie viele verschiedene gibt es? Nutzt hierfür eine Kombindation der Kommandos `sort` und `uniq`.
 
