--- a/uebungen/07.1.pipelines-1.md
+++ b/uebungen/07.1.pipelines-1.md
@@ -3,12 +3,12 @@
 > [!NOTE]
 > Um an Informationen über den Aufbau der Datei `/etc/passwd` zu gelangen, könnt ihr die passende Manpage dazu mit dem Kommando `man 5 passwd` aufrufen.
 > Für die Übungen werden folgende Kommandos benötigt: 
-> `grep`: gibt nur die Zeilen einer Datei/Textstrom aus, in der ein Suchbegriff/Pattern vorkommt
-> `cut`: kann Spalten/Felder aus Dateien/Textströmen ausschneiden
-> `head`: gibt den Anfang einer Datei/Textstrom aus
-> `tail`: gibt das Ende einer Datei/Textstrom aus
-> `sort`: sortiert nach gewünschten Kriterien
-> `uniq`: entfernt mehrfach vorkommende Zeilen
+> - `grep`: gibt nur die Zeilen einer Datei/Textstrom aus, in der ein Suchbegriff/Pattern vorkommt
+> - `cut`: kann Spalten/Felder aus Dateien/Textströmen ausschneiden
+> - `head`: gibt den Anfang einer Datei/Textstrom aus
+> - `tail`: gibt das Ende einer Datei/Textstrom aus
+> - `sort`: sortiert nach gewünschten Kriterien
+> - `uniq`: entfernt mehrfach vorkommende Zeilen
 > Nähere Infos zu den Kommandos sind in den jeweiligen Manpages zu finden.
 
 ## Übung 1: Anzahl der Benutzer im System ermitteln
