--- a/uebungen/07.1.pipelines-1.md
+++ b/uebungen/07.1.pipelines-1.md
@@ -1,4 +1,4 @@
-# Übungen zu Textströmen und Kommando-Pipelines in Linux
+# Übungen zu Filterkommandos, Textströmen und Kommando-Pipelines in Linux
 
 > [!NOTE]
 > Um an Informationen über den Aufbau der Datei `/etc/passwd` zu gelangen, könnt ihr die passende Manpage dazu mit dem Kommando `man 5 passwd` aufrufen.
