--- a/uebungen/07.2.pipelines-2.md
+++ b/uebungen/07.2.pipelines-2.md
@@ -39,7 +39,7 @@ Also alles in einer Zeile anstatt in zwei? Werft vielleicht mal einen Blick in d
 1. Gebt nun ausschließlich alle Vollnamen bzw. *Kommentare* der Benutzer, die die BASH als Login Shell benutzen aus und schreibt das Ergebnis in eine Datei. Die Datei soll nachher wirklich nur die Namen der Benutzer (also z.B. *Tux Tuxedo*) enthaltenen und keine weiteren Zeichen.
 
 ## Übung 14: Alle für den User definierten Aliase finden
-1. Gebt mit `grep` alle Zeilen aus der `~/.bashrc` aus, in denen etwas zu Aliasen steht, also irgenwie die Zeichenkette `alias` oder auch `Alias` vorkommt.
+1. Gebt mit `grep` alle Zeilen aus der `~/.bashrc` aus, in denen etwas zu Aliasen steht, also irgendwie die Zeichenkette `alias` oder auch `Alias` vorkommt.
 2. Schafft ihr es auch, ausschließlich die Zeilen auszugeben, in denen wirklich konkrete und im System gültige Alias-Definitionen stehen? Eliminiert z.B. alle Zeilen von der Ausgabe, die nur Kommentare sind (also mit einer Raute `#` beginnen). 
 2. Werden denn jetzt wirklich nur Alias-Definitionen angezeigt oder auch noch andere Zeilen? Falls ja, versucht auch diese **nicht** mit auszugeben, so dass ihr letztlich nur Zeilen angezeigt bekommt, in denen wirklich Aliase definiert werden.
 3. Durchsucht nun euer gesamtes Home-Verzeichnis nach gültigen Alias-Definitionen. Erstellt dazu im Vorfeld (falls nicht bereits vorhanden) die Datei `~/.bash_aliases` mit ein paar Alias-Definitionen. Ihr müsst `grep` nun dazu überreden ein **Verzeichnis** zu durchsuchen, nicht nur eine einzelne Datei.
@@ -76,6 +76,6 @@ john:x:1006:1000:John Chapel,Accounts Payable,,,Main Office:/home/john:/bin/bash
 ## Übung 16: Archiv aller `.bash*`-Dateien erstellen
 Erstellt ein `tar`-Archiv mit allen `.bash*`-Dateien in eurem Home-Verzeichnis. Zählt **gleichzeitig** die Anzahl der im Archiv enthaltenen Dateien.
 
->[NOTE]
+>[!NOTE]
 > Diese Übung setzt weiteres Wissen z.B. über das Kommando `tar` voraus aber auch andere Konzepte voraus. Lasst diese Übung also einfach aus, falls ihr das Kommando noch nicht kennt bzw. wir es noch nicht besprochen haben. Oder informiert euch darüber... `tar` besprechen wir auch noch!
 
