--- a/uebungen/07.2.pipelines-2.md
+++ b/uebungen/07.2.pipelines-2.md
@@ -77,5 +77,5 @@ john:x:1006:1000:John Chapel,Accounts Payable,,,Main Office:/home/john:/bin/bash
 Erstellt ein `tar`-Archiv mit allen `.bash*`-Dateien in eurem Home-Verzeichnis. Zählt **gleichzeitig** die Anzahl der im Archiv enthaltenen Dateien.
 
 >[!NOTE]
-> Diese Übung setzt weiteres Wissen z.B. über das Kommando `tar` voraus aber auch andere Konzepte voraus. Lasst diese Übung also einfach aus, falls ihr das Kommando noch nicht kennt bzw. wir es noch nicht besprochen haben. Oder informiert euch darüber... `tar` besprechen wir auch noch!
+> Diese Übung setzt weiteres Wissen z.B. über das Kommando `tar` und auch andere Konzepte voraus. Lasst diese Übung also einfach aus, falls ihr das Kommando noch nicht kennt bzw. wir es noch nicht besprochen haben. Oder informiert euch darüber... `tar` besprechen wir noch!
 
