update ex useradd

--- a/uebungen/11.useradd.md
+++ b/uebungen/11.useradd.md
@@ -6,19 +6,21 @@
 
 
 ## Übung 1: Einfachen Benutzer anlegen
-Legt einen neuen Benutzer `someuser` ohne weitere Optionen an und prüft, was passiert.
+Legt einen neuen Benutzer `someuser` mit dem Kommando `useradd someuser` ohne weitere Optionen an und prüft, was passiert.
 
 🔹 **Fragen:**
 - Wurde das Home-Verzeichnis erstellt? Prüft das doch mal mit dem Kommando `ls /home`.
 - Wurde der Benutzer etwas gar nicht erstellt? Wie könnt ihr das überprüfen? In welcher Datei stehen denn die Informationen über Benutzer?
-- Könnt ihr euch als `someuser` anmelden? Probiert das einmal als `root` und dann als euer regulärer Benutzer.
+- Könnt ihr euch als `someuser` anmelden? Probiert das einmal mit dem Kommando `su someuser` als `root` und dann als euer regulärer Benutzer.
 - Was steht in `/etc/passwd` und `/etc/shadow` für diesen Benutzer?
+- Informiert euch über den Sinn und Aufbau der Datei `/etc/shadow`.
+- Warum stehen die Passwörter nicht mehr in der `/etc/passwd` wie urprünglich mal?
 
 ## Übung 2: Benutzer mit Home-Verzeichnis anlegen
 Legt einen Benutzer `karlos` so an, dass automatisch ein Heimatverzeichnis mit gleichem Namen wie der User angelegt wird, welches zusätzlich die "Standarddateien" aus dem *Skeletonverzeichnis* enthält.
 
 🔹 **Fragen:**
-- Wo befindet sich das Home-Verzeichnis?
+- Wo befindet sich das neu angelegte Home-Verzeichnis von `karlos`?
 - Welche Dateien sind darin enthalten?
 - Wo kommen diese Datein her? Aus welchem Verzeichnis?
 - Wie könnte man dafür sorgen, dass alle auf diese Weise neu angelegten User zusätzlich die Datei `WELCOME.md` in ihrem Heimatverzeichnis haben?
@@ -37,17 +39,17 @@ Legt einen Benutzer `korni` mit der KSH als Login-Shell an. Dafür müsst ihr zu
 - Wie kann `korni` die Shell nachträglich auf `bash` ändern? Gibt es dafür ein Kommando? Oder muss das zwingend `root` übernehmen?
 
 ## Übung 5: Benutzer mit zusätzlichen Informationen im  Kommentar / GECOS-Feld anlegen
-Speichert beim Anlegen eines neueen Benutzers `karla` zusätzlich die Informationen `Karla Testara, Abteilung Testing` im GECOS bzw. Kommentar-Feld.
+Speichert beim Anlegen eines neuen Benutzers `karla` zusätzlich die Informationen `Karla Testara, Abteilung Testing` im GECOS bzw. Kommentar-Feld.
 
 🔹 **Fragen:**
 - Wo wird diese Information gespeichert?
-- Wie kann man sie später ändern?
+- Wie könnte man sie später ändern? Geht das auch mit `useradd` oder braucht man dazu ein anderes Kommando? Versucht doch einmal, den Eintrag nachträglich auf `Karla Testara, Chefin Abteilung Testing` zu ändern.
 
 ## Übung 6: Ein Passwort für den Benutzer setzen
 Sorgt nachträglich dafür, dass ihr ein Passwort für einen der neu angelegten Benutzer setzt, so dass sich diese auch am System anmelden können, entweder direkt per SSH oder mit dem Kommando `su` ausgeführt als regulärer Benutzer.
 
 🔹 **Fragen:**
-- Geht das direkt mit dem Kommando `useradd`? Oder brauchen wir dazu ein anderes Kommando?
+- Geht das auch direkt mit dem Kommando `useradd`? Oder brauchen wir dazu ein anderes Kommando?
 
 ## Übung 7: "Vollwertigen" Benutzer anlegen
 Legt einen neuen Benutzer so an, dass dieser 
@@ -70,10 +72,10 @@ Legt einen Benutzer `gamie` an und weist ihn direkt der Gruppe `games` zu.
 - Was ist der Unterschied zwischen `-G` und `-g` von `useradd`, bzw. *primäre* (`primary`) und *erweiterten* (`supplementary`) Gruppen?
 
 ## Übung 9: Benutzer sicher entfernen
-Löscht den Benutzer `karlos` mitsamt des Home-Verzeichnisses (mit einem Kommando).
+Erstellt eine Datei mit Namen `karlos-file` im Verzeichnis `/opt` als `root`. Sorgt nun mit dem Kommando `chown karlos /opt/karlos-file` dafür, dass diese Datei `karlos` gehört bzw. zugewiesen wird (`chown` besprechen wir noch).
 
-🔹 **Fragen:**
-- Was passiert mit Dateien des Users, die nicht unter `/home/karlos` liegen?
+
+Löscht nun den User `karlos` inklusive seines Heimatverzeichnisses mit dem Kommando `userdel` und der entsprechenden Option (-> Manpage). Sind anschließend in jedem Fall alle Dateien, die `karlos` "gehören" entfernt? Schaut einmal mit `ls -l` in das Verzeichnis `/opt`. 
 
 ## Übung 10: Benutzer mit Ablaufdatum erstellen
 Einen Benutzer `iamleaving` anlegen, dessen Konto am 31.12.2025 abläuft.
