edit ex useradd

--- a/uebungen/11.useradd.md
+++ b/uebungen/11.useradd.md
@@ -1,7 +1,7 @@
 # Übungen: Benutzer anlegen unter Linux mit `useradd`
 
 >[!NOTE]
-> Nutzt für die Übungen das Kommanod `useradd` und **nicht** `adduser`, sofern nicht explizit angegeben. Sämtliche für die Übungen nötigen Informationen sollten in der Manpage von `useradd` zu finden sein. Falls nicht direkt, schaut doch mal ganz unten in die `SEE ALSO` Sektion...
+> Nutzt für die Übungen das Kommando `useradd` und **nicht** `adduser`, sofern nicht explizit angegeben. Sämtliche für die Übungen nötigen Informationen sollten in der Manpage von `useradd` zu finden sein. Falls nicht direkt, schaut doch mal ganz unten in die `SEE ALSO` Sektion...
 > Falls ihr eine Meldung bekommt, dass `useradd` nicht gefunden wird, überprüft mal, wie ihr `root` geworden seid: mit `su` oder `su -` bzw. `su -l root`?
 
 
@@ -22,7 +22,7 @@ Legt einen Benutzer `karlos` so an, dass automatisch ein Heimatverzeichnis mit g
 🔹 **Fragen:**
 - Wo befindet sich das neu angelegte Home-Verzeichnis von `karlos`?
 - Welche Dateien sind darin enthalten?
-- Wo kommen diese Datein her? Aus welchem Verzeichnis?
+- Wo kommen diese Dateien her? Aus welchem Verzeichnis?
 - Wie könnte man dafür sorgen, dass alle auf diese Weise neu angelegten User zusätzlich die Datei `WELCOME.md` in ihrem Heimatverzeichnis haben?
 
 ## Übung 3: Benutzer mit individuellem Home-Verzeichnis
@@ -96,8 +96,9 @@ Legt einen neuen Benutzer `newbi` mit dem Kommando `adduser` an.
 🔹 **Fragen:**
 - Was ist der Unterschied zur Verwendung des Kommandos `useradd`?
 - Welche einzelnen Schritte führt `adduser` aus?
-- Ist es wirklich ein eigenes von `useradd` unabhängiges Kommanod?
+- Ist es wirklich ein eigenes von `useradd` unabhängiges Kommando?
 - Warum lernen wir nicht einfach nur die Verwendung von `adduser`?
+- Schaut doch einmal nach, was `adduser` eigentlich ist, z.B. mit dem Kommando `file /usr/sbin/adduser`. Könnt ihr vielleicht sogar genau herausfinden, was `adduser` macht?
 
 ## Übung 13: Verwendete Dateien
 Mal angenommen, ihr hättet weder das Kommando `useradd`, noch `adduser` zur Verfügung, jedoch einen Texteditor, zufälligerweise einen gesaltenen Passworthash und `root` -Rechte. 
