--- a/uebungen/12.groups.md
+++ b/uebungen/12.groups.md
@@ -1,6 +1,7 @@
 # User und Gruppen
 
->[!NOTE] Die Übungen sind bewusst so aufgebaut, dass *Fehler* passieren. Folgt einfach den Übungen, obwohl ihr es vielleicht schon besser wisst, um diese *Fehler* einmal nachzumachen und so dafür sensibilisiert zu werden.
+>[!NOTE] 
+> Die Übungen sind bewusst so aufgebaut, dass *Fehler* passieren. Folgt einfach den Übungen, obwohl ihr es vielleicht schon besser wisst, um diese *Fehler* einmal nachzumachen und so dafür sensibilisiert zu werden.
 >
 > Kommandos für diese Übungen:
 >
@@ -19,21 +20,22 @@ Weist `karla` nun der Gruppe `gfn` zu. Das geht doch mit der Option `-G` von `us
 
 Überprüft nun, welche Gruppenzugehörigkeiten `karla` hat. Das geht z.B. mit den Kommandos `groups` und `id` als `root` mit Angabe des Usernamens, also z.B. `groups karla`.
 
-- Was ist der Unterschied zwischen den beiden Kommandos?
+- Was ist der Unterschied zwischen den beiden Kommandos `groups` und `id`?
 - Kann nur `root` damit die Gruppenzugehörigkeiten einzelner User prüfen?
 
 ## Übung 3 User einer weiteren Gruppe hinzufügen
 Erstellt nun eine weitere Gruppe `adm` und weist `karla` dieser Gruppe zu, wieder mit `usermod -G adm karla`. Prüft die Gruppenzugehörigkkeiten von `karla` mit `groups` oder `id`.
 
-Wir hatten sie doch vorhin auch der Gruppe `gfn` zugewiesen. Was ist passiert?
+Wir hatten `karla` doch vorhin auch der Gruppe `gfn` zugewiesen. Was ist passiert?
 
 ## Übung 4 Unterschied `-g` und `-G`
 War `-G` vielleicht die falsche Option? Probiert es mal mit einem kleine `g`, also `usermod -g gfn karla`. Führt vor und nach diesem Kommando das Kommando `groups karla` aus und vergleicht die Ausgaben. 
 
-- Was machen also die Optionen `-g` und `-G`? Was ist der Unterschied?
+- Was machen also die Optionen `-g` und `-G`? Was ist der Unterschied? Schaut dazu in die Manpage von `usermod`.
+- Was ist der Unterschied zwischen einer *primären* und einer *zusätzlichen* Gruppe? Recherchiert das ggf. im Internet.
 
 ## Übung 5 User einer zusätzlichen Gruppe hinzufügen
-Schaut in der Manpage von `usermod` nach, wie man einen User auf korrekte Art und Weise einer Gruppe hinzufügt, ohne eventuelle bestehende Gruppenzugehörigkkeiten zu löschen.
+Schaut in der Manpage von `usermod` nach, wie man einen User auf korrekte Art und Weise einer zusätzlichen/*supplementary* Gruppe hinzufügt, ohne eventuelle bestehende Gruppenzugehörigkkeiten zu löschen.
 
 `karla` soll beiden Gruppen, `gfn` und `adm` angehören. Korrigiert die Situation entsprechend.
 
@@ -42,7 +44,8 @@ Versucht die Gruppe `gfn` zu löschen obwohl sie Mitglieder hat. Klappt das?
 
 ## Übung 7 User inklusive Heimatverzeichnis löschen
 
->[!NOTE] Die gleiche Übung gibt es auch bei den Übungen zu `useradd`. Macht sie also nur, falls ihr sie da nicht eh schon gemacht habt.
+>[!NOTE] 
+> Die gleiche Übung gibt es auch bei den Übungen zu `useradd`. Macht sie also nur, falls ihr sie da nicht eh schon gemacht habt.
 
 Erstellt eine Datei mit Namen `karlos-file` im Verzeichnis `/opt` als `root`. Sorgt nun mit dem Kommando `chown karlos /opt/karlos-file` dafür, dass diese Datei `karlos` gehört bzw. zugewiesen wird (`chown` besprechen wir noch).
 
