fix typo ex groups

--- a/uebungen/12.groups.md
+++ b/uebungen/12.groups.md
@@ -29,7 +29,7 @@ Erstellt nun eine weitere Gruppe `adm` und weist `karla` dieser Gruppe zu, wiede
 Wir hatten `karla` doch vorhin auch der Gruppe `gfn` zugewiesen. Was ist passiert?
 
 ## Übung 4 Unterschied `-g` und `-G`
-War `-G` vielleicht die falsche Option? Probiert es mal mit einem kleine `g`, also `usermod -g gfn karla`. Führt vor und nach diesem Kommando das Kommando `groups karla` aus und vergleicht die Ausgaben. 
+War `-G` vielleicht die falsche Option? Probiert es mal mit einem kleinen `g`, also `usermod -g gfn karla`. Führt vor und nach diesem Kommando das Kommando `groups karla` aus und vergleicht die Ausgaben. 
 
 - Was machen also die Optionen `-g` und `-G`? Was ist der Unterschied? Schaut dazu in die Manpage von `usermod`.
 - Was ist der Unterschied zwischen einer *primären* und einer *zusätzlichen* Gruppe? Recherchiert das ggf. im Internet.
