--- a/uebungen/13.permissions.md
+++ b/uebungen/13.permissions.md
@@ -1,9 +1,10 @@
 # Übungen zu Berechtigungen unter Linux
 
 >[!NOTE]
-> Um einige Übungen richtig durchführen zu können, könnte es sein, dass ihr die Berechtigungen auf euer Home-Verzeichnis anpassen müsst. Falls es nicht möglich ist, mit einem anderen User in das Verzeichnis zu wechseln, schaut euch die Berechtigungen auf das Verzeichnis mit `ls -ld $HOME` an und versucht zu verstehen, warum sie so gesetzt sind und euch daran hindern, mit einem fremden User dort hinein zu wechseln.
+> Um einige Übungen richtig durchführen zu können, könnte es sein, dass ihr die Berechtigungen auf euer Home-Verzeichnis anpassen müsst. Falls es nicht möglich ist, mit einem anderen User in das Verzeichnis zu wechseln, also z.B. mit dem User `karla` in das Heimatverzeichnis von `korni` schaut euch die Berechtigungen auf das Verzeichnis mit `ls -ld /home/korni` an und versucht zu verstehen, warum sie so gesetzt sind und euch daran hindern, mit einem fremden User dort hinein zu wechseln.
 > 
-> Um dies dennoch möglich zu machen, könnte das Kommando `chmod 755 $HOME` hilfreich sein.
+> Um dies dennoch möglich zu machen, könnte das Kommando `chmod 755 korni` hilfreich sein.
+> Die User sind hier nur beispielhaft genannt, bei euch können das durchaus andere User sein, passt die Kommandos also dementsprechend an.
 >
 > **Tipp:** Ihr könnt fast jedem Kommando die Option `-v` übergeben. Probiert das doch mal mit `chmod` aus, um genauer zu sehen, was passiert.
 
@@ -66,7 +67,7 @@ Glückwunsch, ihr habt nun ein Script erstellt. Versucht es mit folgendem Komman
 ## **Übung 6: credentials Datei erstellen**
 Erstellt die Datei `credentials.txt` mit dem Inhalt `ganz doll geheim` und sorgt dafür, dass deren Inhalt von niemandem außer euch selbst mehr gelesen oder verändert werden darf. Prüft das im Anschluss mit einem anderen Benutzer. 
 
->![NOTE] Dazu müsst ihr ggf. die Berechtigungen auf euer Home-Verzeichnis anpassen. Prüft einmal mit dem Kommanod `ls -ld $HOME` ob die Berechtigungen wie folgt sind: `drwx------`. Falls ja, ändert mit `chmod 755 $HOME` die Berechtigungen. Warum das nötig ist, klären wir später bzw. findet ihr das selbst in den anderen Übungen heraus.
+>[!NOTE] Dazu müsst ihr ggf. die Berechtigungen auf euer Home-Verzeichnis anpassen. Prüft einmal mit dem Kommanod `ls -ld $HOME` ob die Berechtigungen wie folgt sind: `drwx------`. Falls ja, ändert mit `chmod 755 $HOME` die Berechtigungen. Warum das nötig ist, klären wir später bzw. findet ihr das selbst in den anderen Übungen heraus.
 
 ## **Übung 7: Schreibrecht auf Dateien und Verzeichnisse**
 
