fix note in persmissions

--- a/uebungen/13.permissions.md
+++ b/uebungen/13.permissions.md
@@ -67,7 +67,8 @@ Glückwunsch, ihr habt nun ein Script erstellt. Versucht es mit folgendem Komman
 ## **Übung 6: credentials Datei erstellen**
 Erstellt die Datei `credentials.txt` mit dem Inhalt `ganz doll geheim` und sorgt dafür, dass deren Inhalt von niemandem außer euch selbst mehr gelesen oder verändert werden darf. Prüft das im Anschluss mit einem anderen Benutzer. 
 
->[!NOTE] Dazu müsst ihr ggf. die Berechtigungen auf euer Home-Verzeichnis anpassen. Prüft einmal mit dem Kommanod `ls -ld $HOME` ob die Berechtigungen wie folgt sind: `drwx------`. Falls ja, ändert mit `chmod 755 $HOME` die Berechtigungen. Warum das nötig ist, klären wir später bzw. findet ihr das selbst in den anderen Übungen heraus.
+>[!NOTE] 
+> Dazu müsst ihr ggf. die Berechtigungen auf euer Home-Verzeichnis anpassen. Prüft einmal mit dem Kommanod `ls -ld $HOME` ob die Berechtigungen wie folgt sind: `drwx------`. Falls ja, ändert mit `chmod 755 $HOME` die Berechtigungen. Warum das nötig ist, klären wir später bzw. findet ihr das selbst in den anderen Übungen heraus.
 
 ## **Übung 7: Schreibrecht auf Dateien und Verzeichnisse**
 
